Fixed an issue in the vote page: had a horizontal scroll bar, and the content was not center aligned

--- a/AIHOPS/Front/src/Pages/MyProjects.css
+++ b/AIHOPS/Front/src/Pages/MyProjects.css
@@ -1,3 +1,7 @@
+* {
+  box-sizing: border-box;
+}
+
 /* General Styles */
 body {
   font-family: Verdana, sans-serif !important;
